...
              let url = URL(string: profileImageURl) else { return URL(string: "") }
        return url
    }
    
    func createAlert() -> UIAlertController {
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )
        alert.addAction(UIAlertAction(title: "Да", style: .default, handler: { [weak self] action in
            guard let self = self else { return }
            self.logOutFromProfile()
        }))
        alert.addAction(UIAlertAction(title: "Нет", style: .default, handler: nil))
        alert.dismiss(animated: true)
        return alert
...
