...
    }()
    
    private let exitButton: UIButton = {
        let button = UIButton()
        button.setImage(Images.exitButtonImage, for: .normal)
        button.addTarget(self, action: #selector(didTappedExitButton), for: .touchUpInside)
        button.accessibilityIdentifier = "logoutButton"
        return button
    }()
    
    @objc private func didTappedExitButton() {
        showLogOutAlert()
    }
...
